# IndieStudio

./: CMakeLists.txt
include/: EventReceiver.hpp  GameState.hpp  Map.hpp
include/AI/: AI.hpp
include/Blocks/: Bomb.hpp  Box.hpp  IBlock.hpp  Powerup.hpp  Wall.hpp
include/Entities/: Bot.hpp  Player.hpp
include/UI/: Menu.hpp
src/: EventReceiver.cpp  GameState.cpp  Map.cpp  main.cpp
src/AI/: AI.cpp
src/Blocks/: Bomb.cpp  Box.cpp  Powerup.cpp  Wall.cpp
src/Entities/: Bot.cpp  Player.cpp
src/UI/: Menu.cpp  main_test_ui.cpp
